# django-template

./: .gitignore  .pre-commit-config.yaml  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .dockerignore  .env  .env.sample  .gitignore  Dockerfile  celery_beat_entrypoint.sh  celery_flower_entrypoint.sh  celery_worker_entrypoint.sh  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  web_entrypoint.sh
{{ cookiecutter.project_slug }}/.github/workflows/: django.yml
{{ cookiecutter.project_slug }}/config/: api_router.py  asgi.py  urls.py  wsgi.py
{{ cookiecutter.project_slug }}/config/settings/: common.py  dev.py  prod.py
{{ cookiecutter.project_slug }}/nginx/: nginx.conf
{{ cookiecutter.project_slug }}/templates/: 404.html
{{ cookiecutter.project_slug }}/users/: admin.py
{{ cookiecutter.project_slug }}/{{cookiecutter.project_slug}}/templates/: 403.html  500.html
{{ cookiecutter.project_slug }}/{{cookiecutter.project_slug}}/users/: apps.py
{{ cookiecutter.project_slug }}/{{cookiecutter.project_slug}}/users/api/: serializers.py  views.py
