[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.email}}>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
gunicorn = "^21.2.0"
{%- if cookiecutter.use_drf == "y" %}
drf-spectacular = "^0.27.2"
djangorestframework = "^3.15.1"
{%- endif %}
dj-database-url = "^2.2.0"
{%- if cookiecutter.use_celery == "y" %}
celery = "^5.4.0"
django-celery-beat = "^2.6.0"
redis = "^5.0.4"
django-redis = "^5.4.0"
{%- endif %}
django-cors-headers = "^4.3.1"
django-admin-interface = "^0.28.6"
django-environ = "^0.11.2"
{%- if cookiecutter.use_async == 'y' %}
uvicorn = {extras = ["standard"], version = "^0.30.1"}
{%- endif %}
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.2"
whitenoise = "^6.6.0"
{%- if cookiecutter.use_async == 'y' or cookiecutter.use_celery == 'y' %}
watchfiles = "^0.22.0"
{%- endif %}

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.common"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
